<resources>
    <string name="app_name">Contacts App</string>
    <string name="AppTitle1">Welcome to</string>
    <string name="AppTitle2">Contacts</string>
    <string name="AppSelection">Please select an option</string>
    <string name="Selection1">Create New</string>
    <string name="Selection2">Search Existing</string>

    <string name="ContactSelection">Select the Type of Contact</string>
    <string name="PersonalContact">Personal</string>
    <string name="BusinessContact">Business</string>

    <string name="NewPersonal">New Personal Contact</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="StreetAddress">Street Address</string>
    <string name="City">City</string>
    <string name="ClickPhoto">Click to add a Photo</string>
    <string name="Country">Country</string>

    <string name="CreatingNew">New Contact</string>
    <string name="Personal">Personal</string>
    <string name="Description">Description</string>
    <string name="Email">Email</string>
    <string name="Birthday">Birthday</string>
    <string name="Business">Business</string>
    <string name="Company">Company</string>
    <string name="State">State</string>
    <string name="ZipCode">Zip Code</string>
    <string name="BusinessHours">Business Hours</string>
    <string name="Schedule">Schedule</string>
    <string name="SearchContacts">Search Contacts</string>
    <string name="HintPhoneNumber">ex. 123-456-7890</string>
    <string name="HintEmailAddress">ex. johnny.appleseed@gmail.com</string>
    <string name="HintFirstName">ex. Johnny</string>
    <string name="HintLastName">ex. Appleseed</string>
    <string name="HintDescription">ex. Friend</string>
    <string name="HintStreetAddress">ex. 123 Main St.</string>
    <string name="HintCity">ex. Phoenix</string>
    <string name="HintState">ex. AZ</string>
    <string name="HintZipCode">ex. 85017</string>
    <string name="HintCountry">ex. United States</string>
    <string name="HintBirthday">ex. 01/01/2000</string>
    <string name="NewBusiness">New Business Contact</string>
    <string name="HintCompany">ex. Appleseed Co.</string>
    <string name="HintBusinessHours">ex. 8:00AM-10:00PM</string>
    <string name="HintSchedule">ex. MTWThF</string>
    <string name="HintSearch">Search</string>
    <string name="SearchInstructions">Please enter the information that you would like to search for</string>
    <string name="SearchResults">Search Results</string>
    <string name="ResultsIntro">The following results were found</string>
    <string name="ShowPersonal">Johnny Appleseed</string>
    <string name="Edit">Edit</string>
    <string name="DeleteContact">Delete Contact</string>
    <string name="WebsiteURL">Website URL</string>
    <string name="HintURL">ex. www.appleseedco.com</string>
    <string name="Address">Address</string>
    <string name="Pdescription">Friend</string>
    <string name="OpenCallApp">Opening Calling App...</string>
    <string name="OpenEmailApp">Opening Email App...</string>
    <string name="OpenInternetApp">Opening Internet App...</string>
    <string name="OpenNavigateApp">Opening Navigation App...</string>
    <string name="OpenTextApp">Opening Texting App...</string>
    <string name="ShowBusiness">Steve Jobs</string>
    <string name="Bcompany">Apple</string>
    <string name="Delete">Delete</string>
    <string name="DeleteQuestion">Are you sure you want to delete this contact?</string>
    <string name="YesDelete">Yes</string>
    <string name="NoDelete">No</string>
    <string name="EditContact">Edit Contact</string>
    <string name="EditPhoto">Click to Change the Photo</string>
    <string name="Photo">Photo</string>
    <string name="PhotoSelection">ex. Photo 1-16</string>
    <string name="ShowAll">Show All</string>
    <string name="ShowAllInstructions">Or press the button below to show all existing contacts</string>
    <string name="Contacts">Contacts</string>
    <string name="SortBy">Sort By:</string>
    <string name="type">- Type</string>
    <string name="Creating">Creating</string>
    <string name="title_activity_search_results_one">SearchResultsOne</string>
    <string name="Search">Search</string>
    <string name="Sort">Sort</string>
</resources>
